--- a/kie-dmn-backend/pom.xml
+++ b/kie-dmn-backend/pom.xml
@@ -38,6 +38,24 @@
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
+<dependency>
+    <groupId>org.xmlunit</groupId>
+    <artifactId>xmlunit-core</artifactId>
+    <version>2.2.1</version>
+    <scope>test</scope>
+</dependency>
+<dependency>
+    <groupId>net.java.dev.stax-utils</groupId>
+    <artifactId>stax-utils</artifactId>
+    <version>20070216</version>
+    <exclusions><exclusion>
+      <groupId>com.bea.xml</groupId>
+      <artifactId>jsr173-ri</artifactId>
+      </exclusion>
+    </exclusions>
+</dependency>
+
+
   </dependencies>
 
 </project>
