--- a/kie-dmn-backend/pom.xml
+++ b/kie-dmn-backend/pom.xml
@@ -14,6 +14,10 @@
   <packaging>bundle</packaging><!-- bundle = jar + OSGi metadata -->
 
   <name>KIE :: Decision Model Notation :: Backend</name>
+  
+  <properties>
+    <osgi.Bundle-SymbolicName>org.kie.dmn.backend</osgi.Bundle-SymbolicName>
+  </properties>
 
   <dependencies>
     <dependency>
