--- a/kie-dmn-core/pom.xml
+++ b/kie-dmn-core/pom.xml
@@ -14,6 +14,10 @@
   <packaging>bundle</packaging><!-- bundle = jar + OSGi metadata -->
 
   <name>KIE :: Decision Model Notation :: Core</name>
+  
+  <properties>
+    <osgi.Bundle-SymbolicName>org.kie.dmn.core</osgi.Bundle-SymbolicName>
+  </properties>
 
   <dependencyManagement>
     <dependencies>
